# secondbrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  RESTRUCTURE_IMPLEMENTATION.md  build_keyword_index.py  config.example.yaml  create_release.py  priority_config.example.yaml  pyproject.toml  pytest.ini  release.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: ADAPTIVE_CHUNKER_SUMMARY.md  API.md  ARCHITECTURE.md  CHUNKER_MODIFICATION_EVALUATION.md  CODE_QUALITY_CHECK_20260330.md  CODE_QUALITY_FINAL_REPORT.md  CONFIG.md  DATABASE_ENCODING_FIX.md  DATABASE_UTF8_FIX_FINAL.md  DB_RESTRUCTURE_PLAN.md  DEPLOY.md  FINAL_SUMMARY.md  HYBRID_RETRIEVER_CONTENT_FIX.md  HYBRID_RETRIEVER_ENHANCEMENT.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENTS_HIGH_PRIORITY.md  IMPROVEMENTS_LOW_PRIORITY.md  IMPROVEMENTS_MEDIUM_PRIORITY.md  INTEGRATION_COMPLETE.md  KEYWORD_INDEX_OPTIMIZATION.md  MCP_VAULT_SUPPORT_ANALYSIS.md  MCP_VAULT_SUPPORT_FIXED.md  MULTIMODAL_REQUIREMENTS.md  PHASE1_TEST_REPORT.md  PHASE2_TEST_REPORT.md  PHASE3_TEST_REPORT.md  PHASE4_TEST_REPORT.md  PHASE5_TEST_REPORT.md  PLUGIN_IMPLEMENTATION.md  PLUGIN_SYSTEM.md  PROJECT_SUMMARY.md  QUERY_API.md  QUICK_REFERENCE.md  SEMANTIC_INDEX_CONTENT_STORAGE.md  SQLITE_UTF8_GUIDE.md  TEST_REPORT.md  WEB_UI_IMPROVEMENTS.md  hybrid_retriever_weight_example.py  migration_stats.json
docs/RELEASES/: FINAL_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN_FULL.md  INITIALIZATION_REPORT.md  MCP_CONFIG.md  PHASE1_COMPLETION.md  PHASE1_SUMMARY.md  PHASE1_VERIFICATION.md  PHASE2_COMPLETION.md  PHASE2_TEST_REPORT.md  PHASE3_COMPLETION.md  PHASE3_TEST_REPORT.md  PROJECT_STRUCTURE.md  RELEASE.md  RELEASE_v1_0_0.md
plugins/: priority_boost.py  search_logger.py
scripts/: auto_detect_and_index.py  auto_incremental_index.sh  batch_add_doc_type.py  build_index.py  build_index_adaptive.py  build_index_fixed.py  build_index_nanoonly.py  build_index_semantic.py  check_changes.py  create_new_schema.sql  incremental_index.py  migrate_to_v2.py  query_db.sh  reindex_all.py  search_sb.py  test_new_schema.py  verify_migration.py
src/: __init__.py  server.py  version.py
src/config/: __init__.py  settings.py  validator.py
src/index/: __init__.py  chunker.py  chunker.py.new  embedder.py  hybrid_retriever.py  hybrid_retriever.py.new  hybrid_retriever_fixed.py  keyword_index.py  semantic_index.py  (+2 more)
tests/: phase2_fastembed_results.json  phase2_test_results.json  phase3_fastembed_results.json  test_adaptive_chunker.py  test_core.py  test_extended.py  test_phase2_fastembed.py  test_phase2_fastembed_only.py  test_phase3_fastembed.py  test_phase5_comprehensive.py
(+29 files in other folders)
