[metadata]
name = secondbrain
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = SecondBrain - 基于优先级分类的 Obsidian Vault 管理工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/secondbrain
project_urls =
    Bug Tracker = https://github.com/yourname/secondbrain/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10
install_requires =
    mcp>=1.0.0
    sentence-transformers>=2.2.0
    faiss-cpu>=1.7.4
    pyyaml>=6.0
    pydantic>=2.0.0
    watchdog>=3.0.0
    rank-bm25>=0.2.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    secondbrain = secondbrain.server:main

[options.extras_require]
dev = 
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0